initial my publisher

--- a/Publisher/SmartPublisherDemo.vcxproj
+++ b/Publisher/SmartPublisherDemo.vcxproj
@@ -73,7 +73,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>../SmartPublisherSDK/lib/debug;$(LibraryPath)</LibraryPath>
+    <LibraryPath>SmartPublisherSDK/lib/debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
