--- a/RTMPPublisher/RTMPPublisher.vcxproj.filters
+++ b/RTMPPublisher/RTMPPublisher.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="Routines\Routines.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Routines\Player.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
